# pqgen

./: Makefile  Makefile.am  README  README.md  configure.ac
doc/: pq-theta.1  pqgen-body  pqgen-het.1  pqgen-sfs.1  pqgen-theta.1  pqgen.1
include/: cmd_het.h  cmd_sfs.h  cmd_theta.h  pq_args.h  pq_div.h  pq_doc.h  pq_generics.h  pq_genetics.h  pq_het.h  pq_htable.h  pq_hwe.h  pq_limits.h  pq_parse.h  pq_pnds.h  pq_sfobj.h  pq_sfs.h  pq_sfstats.h  pq_theta.h  pq_version.h
share/: codon2syn  pq-dna2codon.1
share/man/man1/: pq-theta.1
src/: cmd_het.c  cmd_sfs.c  cmd_theta.c  codon2pnds.c  dna2codon.c  dna2div.c  gen2hwe.c  main.c  pq-codon2nonsyn.c  pq-codon2pnds.c  pq-div.c  pq-dna2codon.c  pq-gen2hwe.c  pq-theta.c  pq_args.c  pq_div.c  pq_generics.c  pq_genetics.c  pq_het.c  pq_htable.c  pq_parse.c  pq_pnds.c  pq_sfobj.c  pq_sfs.c  pq_sfstats.c  pq_theta.c  pq_version.c  pqgen.c  pqstats.c
